--- a/index.css
+++ b/index.css
@@ -1,12 +1,32 @@
-body{
+html {
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+body {
     background-color:#2d2f33;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
 }
 
 nav {
-    float: left;
+    background-color: red;
+    order: 1;
+    flex-grow: 0;
+    height: 100%;
+    width: 120px;
+    padding: 0;
 }
 
-nav a{
+nav a {
     text-decoration: none;
     color: lightgray;
 }
@@ -15,10 +35,30 @@ nav a:hover {
     color: white;
 }
 
+nav ul {
+	margin: 0;
+	padding-left: 5px;
+	padding-right: 5px;
+	height: 100%;
+	flex-direction: row;
+}
+
 nav li {
     list-style-type: none;
+    padding: 0;
+    margin: 10% 0 10% 0;
+    background-color: blue;
+}
+
+h1 {
+    background-color: orange;
+    margin-top: 0;
+    text-align: center;
 }
 
 header {
-    margin: 50% 50% 50% 50%;
+	order: 2;
+	flex-grow: 1;
+	justify-content: center;
+	align-self: center;
 }
