--- a/index.css
+++ b/index.css
@@ -4,10 +4,13 @@ html {
 	width: 100%;
 	margin: 0;
 	padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 body {
-    background-color:#2d2f33;
+    background-color:#282828;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -16,10 +19,12 @@ body {
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: flex-start;
+    align-self: center;
+    /*border: black 1px solid;*/
 }
 
 nav {
-    background-color: red;
+    background-color: #3d3d3d;
     order: 1;
     flex-grow: 0;
     height: 100%;
@@ -30,29 +35,36 @@ nav {
 nav a {
     text-decoration: none;
     color: lightgray;
+    background-color: #545454;
+    display: block;
+    padding: 10% 0 10% 0;
 }
 
 nav a:hover {
     color: white;
+    background-color: #6d6d6d;
+    
 }
 
 nav ul {
 	margin: 0;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding-left: 0px;
+	padding-right: 0px;
 	height: 100%;
-	flex-direction: row;
+    display: flex;
+	flex-direction: column;
+    justify-content: space-around;
+    /*align-content: space-around;*/
 }
 
 nav li {
     list-style-type: none;
     padding: 0;
-    margin: 10% 0 10% 0;
-    background-color: blue;
+    margin: 0;
+    text-align: center;
 }
 
 h1 {
-    background-color: orange;
     margin-top: 0;
     text-align: center;
 }
